--- a/src/sass/_media.scss
+++ b/src/sass/_media.scss
@@ -133,4 +133,9 @@
             font-size: 10px;
         }
     }
+    .advantage {
+        &__header {
+            font-size: 20px;
+        }
+    }
 }
