--- a/src/sass/_media.scss
+++ b/src/sass/_media.scss
@@ -138,4 +138,11 @@
             font-size: 20px;
         }
     }
+    .button {
+        &_main {
+            width: 190px;
+            height: 35px;
+            font-size: 12px;
+        }
+    }
 }
