--- a/src/sass/blocks/_buttons.scss
+++ b/src/sass/blocks/_buttons.scss
@@ -15,4 +15,10 @@
         height: 54px;
         font-size: 16px;
     }
+    &_consultation {
+        margin-top: 20px;
+        width: 303px;
+        height: 54px;
+        font-size: 16px;
+    }
 }
