--- a/src/sass/blocks/_forms.scss
+++ b/src/sass/blocks/_forms.scss
@@ -3,5 +3,14 @@
     display: flex;
     flex-direction: column;
     width: 300px;
-    height: 258px;
+    input{
+        margin-bottom: 15px;
+        height: 50px;
+        border-radius: 5px;
+        background-color: #fff;
+        &:last-child {
+            margin-bottom: 20px;
+        }
+
+    }
 }
