--- a/src/sass/_media.scss
+++ b/src/sass/_media.scss
@@ -71,6 +71,7 @@
         }
         &__subheader {
             font-size: 16px;
+            margin-top: 10px;
         }
         &__wrapper {
             align-items: center;
@@ -99,9 +100,14 @@
         width: 140px;
         height: 25px;
         &_main {
-            width: 200px;
+            width: 250px;
             height: 40px;
             font-size: 13px;
+        }
+        &_submit {
+            margin-top: 0px;
+            width: 100%;
+            height: 40px;
         }
     }
     .advantage {
@@ -117,6 +123,21 @@
                 margin-top: 0px;
             }
         }
+    }
+    .feed-form {
+        input {
+            height: 40px;
+
+        }
+    }
+    .consultation {
+        &__descr {
+            font-size: 16px;
+            line-height: 24px;
+        }
+    }
+    .title {
+        font-size: 16px;
     } 
 }
 @media (max-width: 424px) {
@@ -124,29 +145,60 @@
         width: 300px;
     }
     .promo {
+        min-height: 600px;
         &__header {
             font-size: 22px;
         }
         &__subheader {
             font-size: 12px;
-            margin-top: 10px;
+            margin-top: 0;
         }
         &__icons {
             width: 300px;
         }
         &__icon {
-            font-size: 10px;
+            font-size: 12px;
         }
     }
     .advantage {
-        &__header {
-            font-size: 20px;
+        padding: 35px 0 45px 0;
+        &__subheader {
+            margin-top: 15px;
+            font-size: 15px;
+        }
+        &__descr {
+            margin-top: 5px;
         }
     }
     .button {
         &_main {
-            width: 190px;
-            height: 35px;
+            width: 250px;
+            height: 40px;
+            font-size: 12px;
+        }
+        &_submit {
+            width: 100%;
+            height: 40px;
+            font-size: 12px;
+        }
+    }
+    .title {
+        text-align: center;
+        font-size: 15px;
+        text-align: center;
+    }
+    .consultation {
+        min-height: 600px;
+        &__descr {
+            text-align: center;
+            font-size: 12px;
+            line-height: 16px;
+        }
+    }
+    .feed-form {
+        width: 270px;
+        margin: 25px auto;
+        input {
             font-size: 12px;
         }
     }
