--- a/src/sass/blocks/_forms.scss
+++ b/src/sass/blocks/_forms.scss
@@ -3,14 +3,18 @@
     display: flex;
     flex-direction: column;
     width: 300px;
-    input{
+    input {
+        padding: 0 20px;
         margin-bottom: 15px;
         height: 50px;
         border-radius: 5px;
         background-color: #fff;
-        &:last-child {
+        border: none;
+        font-weight: 400;
+        font-size: 14px;
+        color: #4B4B4B;
+        &:nth-child(3) {
             margin-bottom: 20px;
         }
-
     }
 }
