--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -4,7 +4,8 @@
     font-family: Museo Sans Cyrl, sans-serif;
 }
 
-.container{
+.container {
+    position: relative;
     max-width: 950px;
     margin: 0 auto;
 }
@@ -16,6 +17,7 @@
 @import 'blocks/advantage';
 @import 'blocks/consultation';
 @import 'blocks/forms';
+@import 'blocks/carousel';
 
 
 @import 'media';
