--- a/src/sass/blocks/_buttons.scss
+++ b/src/sass/blocks/_buttons.scss
@@ -13,6 +13,7 @@
         color: black;
         background-color: #fff;
         box-shadow: 3px 3px 20px $main-color;
+        transform: scale(1.1);
     }
     &_main {
         margin-top: 67px;
