--- a/src/sass/blocks/_carousel.scss
+++ b/src/sass/blocks/_carousel.scss
@@ -15,6 +15,10 @@
         img {
             width: 31px;
             height: 50px;
+            transition: 0.5s all;
+            &:hover {
+                transform: scale(1.2);
+            }
         }
     }
     .next {
