--- a/src/sass/blocks/_catalog.scss
+++ b/src/sass/blocks/_catalog.scss
@@ -88,14 +88,12 @@
             text-decoration-line: underline;
             text-transform: uppercase;
             color: $main-color;
-            &:hover {
-                color: $main-color
-            }
+            cursor: pointer;
         }
         &__back {           
             position: absolute;
             left: 50%;
-            transform: translateX(-60%);
+            transform: translateX(-50%);
             bottom: 0;
         }
         hr {
@@ -137,7 +135,6 @@
         &__list {
             position: relative;
             width: 50%;
-            margin-left: 20px;
             transform: translateX(0%);
             padding-right: 20px;
             transition: 0.5s all;
